--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,6 @@
 [pytest]
-addopts = -v
+addopts = -v --alluredir allure-results
+log_cli=1
+log_level=INFO
+
+disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
